# dylan-community-be-fastapi

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  README.md  constants.js  db.js  init.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  utils.js
.github/ISSUE_TEMPLATE/: 스타트업코드-버그리포트-구조.md
.github/workflows/: deploy.yml
config/: constants.js  db.js  dbConfig.js  multerConfig.js  utils.js
controllers/: commentController.js  postController.js  userController.js
data/: comments.json  posts.json  users.json
db/: db.js
middlewares/: errorHandler.js
models/: commentModel.js  postModel.js  userModel.js
routes/: authRoutes.js  commentRoutes.js  pages.js  postRoutes.js  uploadRoutes.js  userRoutes.js
src/: main.py
src/auth/: crud.py  dependencies.py  models.py  models.pyi  router.py  schemas.py  service.py
src/common/: schemas.py
src/core/: config.py  security.py
src/db/: base.py  session.py
src/scripts/: init_db.py
src/users/: crud.py  dependencies.py  models.py  models.pyi  router.py  schemas.py  service.py
tests/: conftest.py  test_main.py
tests/auth/: test_auth_crud.py  test_auth_service.py
tests/core/: test_security.py
tests/users/: test_crud.py  test_service.py  test_users_crud.py  test_users_service.py
utils/: customError.js  jwt.js  uploadUtils.js  utils.js
